crates/biome_html_parser/tests/html_specs/ok/svelte/directives/style_important_with_expression.svelte
<div style:color|important={myColor}>Important dynamic</div>
