crates/biome_html_parser/tests/html_specs/error/svelte/directives/style_incomplete_expression.svelte
<div style:color={>Incomplete</div>
